fix gifs title overflow

--- a/_header.scss
+++ b/_header.scss
@@ -30,7 +30,7 @@
     animation: fadeIn 0.4s;
     align-items: center;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 100px;
     left: 0px;
     list-style: none;
