--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ body.dark .searchresults h2 {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 100px;
   left: 0px;
   list-style: none;
@@ -817,10 +817,8 @@ footer {
   bottom: 0;
   color: white;
   font-family: "Roboto", sans-serif;
-  margin: 0 0 10px 8px;
+  padding: 0 8px 10px 8px;
   text-transform: capitalize;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .overlaytitle {
@@ -869,7 +867,7 @@ footer {
     margin-right: 11px;
   }
   .overlayp {
-    margin: 0 0 20px 12px;
+    padding: 0 0 20px 12px;
   }
   .overlaytitle {
     margin-top: 5px;
